--- a/home.html
+++ b/home.html
@@ -23,6 +23,9 @@
 						<li><a href="#contact">Contact</a></li>
 						<li><a href="panelElements.html">Panels</a></li>
 					</ul>
+					<ul class="nav navbar-nav navbar-right">
+						<li><a href="#about">Mon compte</a></li>
+					</ul>
 				</div><!--/.nav-collapse -->
 			</div>
 		</div>
